[gd_scene load_steps=13 format=3 uid="uid://bae3kf36u3115"]

[ext_resource type="Script" uid="uid://bxoj4abwmi3vj" path="res://GM.gd" id="1_0hol4"]
[ext_resource type="Texture2D" uid="uid://1fsfpkgncr3b" path="res://background.png" id="1_epypp"]
[ext_resource type="Texture2D" uid="uid://beh7q7npd5fjt" path="res://castle.png" id="2_0hol4"]
[ext_resource type="Script" uid="uid://cgpdqiexfumo4" path="res://play_state.gd" id="2_4d7sh"]
[ext_resource type="Script" uid="uid://gdxci1xh3ufw" path="res://minion_map.gd" id="2_d21ai"]
[ext_resource type="Script" uid="uid://bt2qdir04qfjw" path="res://money_system.gd" id="2_hqns4"]
[ext_resource type="Script" uid="uid://4sbh4qu28whe" path="res://end_state.gd" id="3_ir8iy"]
[ext_resource type="Script" uid="uid://cge3tf2fxqpgb" path="res://castle_1.gd" id="3_q6r6c"]
[ext_resource type="PackedScene" uid="uid://ctuv1ou4cgov3" path="res://spwan_unit_button.tscn" id="3_rj586"]
[ext_resource type="Script" uid="uid://bq6jelu08e04t" path="res://unit_spawner.gd" id="5_q6r6c"]
[ext_resource type="Script" uid="uid://3a083idnpn5a" path="res://enemy_spawner.gd" id="6_kdubu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0ka3"]
bg_color = Color(0.6901961, 0.5921569, 0.27058825, 0.6431373)

[node name="GM" type="Node2D"]
script = ExtResource("1_0hol4")

[node name="Money_system" type="Node" parent="."]
script = ExtResource("2_hqns4")

[node name="play_state" type="Node" parent="."]
script = ExtResource("2_4d7sh")

[node name="end_state" type="Node" parent="."]
script = ExtResource("3_ir8iy")

[node name="minion_map" type="Node" parent="."]
script = ExtResource("2_d21ai")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Money_text" type="Label" parent="CanvasLayer"]
offset_left = 23.0
offset_top = 23.0
offset_right = 118.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_x0ka3")
text = "$:0"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 40.0
offset_top = 567.0
offset_right = 207.0
offset_bottom = 607.0
theme_override_constants/separation = 50

[node name="spwan_unit_1" parent="CanvasLayer/HBoxContainer" instance=ExtResource("3_rj586")]
layout_mode = 2
unit_name = "red"

[node name="spwan_unit_2" parent="CanvasLayer/HBoxContainer" instance=ExtResource("3_rj586")]
layout_mode = 2
unit_name = "blue"

[node name="spwan_unit_3" parent="CanvasLayer/HBoxContainer" instance=ExtResource("3_rj586")]
layout_mode = 2

[node name="spwan_unit_4" parent="CanvasLayer/HBoxContainer" instance=ExtResource("3_rj586")]
layout_mode = 2
unit_name = "snow_ball_shooter"

[node name="background" type="Node" parent="."]

[node name="bg" type="Sprite2D" parent="background"]
position = Vector2(575.5, 323.5)
scale = Vector2(0.59843755, 0.6009259)
texture = ExtResource("1_epypp")

[node name="castle1" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(73.00001, 363.5)
scale = Vector2(1.96875, 3.7343748)
texture = ExtResource("2_0hol4")
script = ExtResource("3_q6r6c")

[node name="Castle2" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(1077, 344)
scale = Vector2(1.921875, 3.7031248)
texture = ExtResource("2_0hol4")

[node name="unit spawner" type="Node" parent="."]
script = ExtResource("5_q6r6c")

[node name="enemy spawner" type="Node" parent="."]
script = ExtResource("6_kdubu")
spec_unit = "snow_ball_shooter"
